--- a/Basic.html
+++ b/Basic.html
@@ -64,6 +64,9 @@
     <li class="nav-item">
       <a class="nav-link" href="#"><i class="fa fa-fw fa-search"></i>SEARCH</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" href="MAP.HTML">MAP</a>
+    </li>
   </ul>
 </nav>
 
@@ -166,5 +169,17 @@
 </div>
 
 
+<footer>
+  <nav class="navbars">
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-twitter"></a>
+          <a href="#" class="fa fa-google"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          <a href="#" class="fa fa-youtube"></a>
+          <a href="#" class="fa fa-instagram"></a> 
+          <a href="#" class="fa fa-skype"></a>
+          
+     </nav>
+   
 </body>
 </html>
