map added and fevicons

--- a/WEBHTML.HTML
+++ b/WEBHTML.HTML
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <link rel="shortcut icon" href="fev1.png" type="image/x-icon">
+            <link rel="icon" href="fev1.png" type="image/x-icon">
         <title>
             HTML5
         </title>
