--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
     <span class="carousel-control-next-icon"></span>
   </a>
 </div>
+<div class="container">
+    <p></p>
+    <p>CLICK <kbd>MAP</kbd> to open MAP.</p>
+  </div>
 
 
 <footer>
